@@ -1,6 +1,12 @@
-EXTRA_DIST += slenv
+EXTRA_DIST += slenv deslenv
 
 $(DSTBASE)/slenv: slenv
+	rm -f $@
+	$(MKDIR_P) $(DSTBASE)
+	$(INSTALL_SCRIPT) $^ $@
+	chmod -w $@
+
+$(DSTBASE)/deslenv: deslenv
 	rm -f $@
 	$(MKDIR_P) $(DSTBASE)
 	$(INSTALL_SCRIPT) $^ $@
@@ -10,4 +16,4 @@ slenv-fetch: ; $(RULE_DONE)
 slenv-configure: ; $(RULE_DONE)
 slenv-build: ; $(RULE_DONE)
 
-slenv-install: $(DSTBASE)/slenv ; $(RULE_DONE)
+slenv-install: $(DSTBASE)/slenv $(DSTBASE)/deslenv ; $(RULE_DONE)
